test/fail/generated/test_ConvTranspose2d_groups/test_data_set_0/input_0.pb
J ú
¶?×c ¿S¥À-À¿Ä‘?B€?Åˆ™¿tv>ïãŽ½Ó*M¿AÕ.?Ç/Ô¾#’?ÈXÀ?·^Z>‡+Z>S87¿»~s¼Pñ.¿j¹*?åã¼ÔÓN?ú‡½f@M>J×,¿ßƒ¾©À±þ4?Œf˜¿/°|¿d×•=®wœ?¯ª´>ç‹?6@„?¹—@¿—*õ>Õ@6¿Qœ1¿;	 <